feat: form page layout

--- a/example/example.html
+++ b/example/example.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./example-style.css" rel="stylesheet" />
+    <link href="../assets/style.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 <body>
     <header>
-        <img id="logo"src="./rophie-logo.png" alt="Rophie location">
+        <img id="logo"src="../assets/rophie-logo.png" alt="Rophie location">
         <section id="stakeholders_container">
             <table id="owners" class="stakeholder">
                 <thead>
